# mview-rs

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
src/: lib.rs  main.rs  mview_entry.rs  mview_file.rs  utils.rs
