[package]
name    = "mview"
version = "0.1.0"

authors     = ["Vítor Vasconcellos <vasconcellos.dev@gmail.com>"]
categories  = ["parsing", "rendering::data-formats"]
description = "A tool for unpacking Marmoset Viewer archive packages, enabling the extraction and decompression of 3D models and scenes."
edition     = "2021"
keywords    = ["3d", "decompressor", "mview", "unpacker"]
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/HeavenVolkoff/mview-rs"

[[bin]]
name = "mview-extract"
path = "src/main.rs"

[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
debug       = true
incremental = true
lto         = "thin"
strip       = "symbols"

[profile.bench]
incremental = true

[lints.clippy]
cargo       = { priority = -1, level = "deny" }
complexity  = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
nursery     = { priority = -1, level = "deny" }
pedantic    = { priority = -1, level = "deny" }
perf        = { priority = -1, level = "deny" }
style       = { priority = -1, level = "deny" }
suspicious  = { priority = -1, level = "deny" }

implicit-return         = "allow"
module-name-repetitions = "allow"
multiple-crate-versions = "allow"
pub-use                 = "allow"
too_many_lines          = "allow"
