[workspace]
members = [".", "cli"]

[package]
name    = "mview"
version = "0.1.0"

authors     = ["Vítor Vasconcellos <vasconcellos.dev@gmail.com>"]
categories  = ["parsing", "rendering::data-formats"]
description = "Library for parsing Marmoset Viewer archive packages"
homepage    = "https://github.com/HeavenVolkoff/mview-rs"
include     = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
readme.workspace     = true
repository.workspace = true

[workspace.package]
edition    = "2021"
keywords   = ["3d", "decompress", "mview", "unpacker"]
license    = "MIT"
readme     = "README.md"
repository = "https://github.com/HeavenVolkoff/mview-rs"

[profile.dev]
opt-level = 1

[profile.release]
debug       = true
incremental = true
lto         = "thin"
strip       = "symbols"

[profile.bench]
incremental = true

[workspace.lints.rust]
# Warns
deprecated            = "warn"
rust_2018_idioms      = { priority = -1, level = "warn" }
trivial_casts         = "warn"
trivial_numeric_casts = "warn"
unused_allocation     = "warn"
unused_qualifications = "warn"
# Forbids
deprecated_in_future = "forbid"
unsafe_code          = "forbid"

[workspace.lints.clippy]
cargo       = { priority = -1, level = "deny" }
complexity  = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
nursery     = { priority = -1, level = "deny" }
pedantic    = { priority = -1, level = "deny" }
perf        = { priority = -1, level = "deny" }
style       = { priority = -1, level = "deny" }
suspicious  = { priority = -1, level = "deny" }

implicit-return         = "allow"
module-name-repetitions = "allow"
multiple-crate-versions = "allow"
pub-use                 = "allow"
too_many_lines          = "allow"
